[project]
name = "mxmake"
description = "Generates a Python project-specific Makefile by using an extensible library of configurable Makefile snippets."
keywords = ["development", "deployment", "make"]
authors = [
  {name = "MX Stack Developers", email = "dev@bluedynamics.com" }
]
requires-python = ">=3.10"
license = { text = "BSD 2-Clause License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "inquirer",
    "Jinja2",
    "mxdev>=4.0.2",
    "pyyaml"
]
dynamic = ["readme", "version"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mxmake/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGES.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "LICENSE.md"

[project.optional-dependencies]
docs = [
    "myst-parser",
    "shibuya",
    "Sphinx>=7.2",
    "sphinxcontrib-mermaid",
]
test = ["pytest", "coverage[toml]"]

[project.urls]
Homepage = "https://github.com/mxstack/mxmake"
Documentation = "https://mxstack.github.io/mxmake"
"Bug Reports" = "https://github.com/mxstack/mxmake/issues"
Source = "https://github.com/mxstack/mxmake/tree/main"

[project.scripts]
mxmake = "mxmake.main:main"

[project.entry-points.mxdev]
hook = "mxmake.hook:Hook"

[project.entry-points."mxmake.topics"]
core = "mxmake.topics:core"
docs = "mxmake.topics:docs"
js = "mxmake.topics:js"
ldap = "mxmake.topics:ldap"
qa = "mxmake.topics:qa"
system = "mxmake.topics:system"
applications = "mxmake.topics:applications"
i18n = "mxmake.topics:i18n"

[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "src",
]

[tool.ruff]
target-version = "py310"
# Exclude a variety of commonly ignored directories.
extend-exclude = ["src/mxmake/_version.py"]

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins (shadowing builtins)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]

[tool.ruff.lint.isort]
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
no-sections = true
order-by-type = false

[tool.ruff.lint.pycodestyle]
max-line-length = 120  # E501 triggers above this, allows flexibility

[tool.ruff.lint.per-file-ignores]
"src/mxmake/tests/*" = ["E101", "RUF012", "T201"]

[tool.ty]

[tool.ty.src]
exclude = ["src/mxmake/sphinxext.py"]
