[metadata]
version = 0.2.dev0
name = mxmake
description = Make based project development and deployment
long_description = file: README.rst, CHANGES.rst
keywords = development deployment environment
author = MX Stack Developers
author_email = dev@bluedynamics.com
url = https://github.com/mxstack/mxdev
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    = src
install_requires =
    Jinja2
    mxdev
    setuptools
test_suite = mxmake.tests
zip_safe = False
include_package_data = True

[options.packages.find]
where =
    src

[options.extras_require]
test =
    pytest
    pytest-mock
    types-setuptools
docs =
    Sphinx
    sphinx-conestack-theme

[options.entry_points]
console_scripts =
    mxmake = mxmake.main:main

mxdev =
    hook = mxmake.hook:Hook

mxmake.domains =
    ldap = mxmake.targets:LDAP

[isort]
profile = black
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2

[mypy]
ignore_missing_imports = True

[zest.releaser]
create-wheel = yes
